Fix no-replace lobby map publication